deployment/Kubernetes/overlays/ou/staging/rap/rap-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rap-ingress
spec:
  tls:
    - hosts:
        - staging.cs.ou.nl
  rules:
    - host: staging.cs.ou.nl
